intro on why developping Thelia 2

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="reveal.js/css/reveal.min.css">
     <link rel="stylesheet" href="reveal.js/css/theme/default.css" id="theme">
     <link rel="stylesheet" href="reveal-custom/css/custom.css">
+    <link rel="stylesheet" href="thelia.css">
 
     <!-- For syntax highlighting -->
     <link rel="stylesheet" href="reveal.js/lib/css/zenburn.css">
@@ -53,6 +54,34 @@
             <small style="float: left">Clemont'ech</small>
             <small style="float: right">28/05/2014</small>
         </p>
+    </section>
+    <section>
+        <section data-background="img/pkoi.jpg">
+
+        </section>
+        <section>
+            <ul>
+                <li>Internationalisation</li>
+                <li>Interopérabilité</li>
+                <li>Mise en place de bonnes pratiques</li>
+                <li>Nouvelles fonctionnalités</li>
+            </ul>
+        </section>
+        <section>
+            <h2>BackOffice</h2>
+            <ul>
+                <li>php 5.4</li>
+                <li>sf2 components</li>
+                <li>Propel</li>
+            </ul>
+        </section>
+        <section>
+            <h2>FrontOffice</h2>
+            <ul>
+                <li>HTML 5</li>
+                <li>BootStrap 3 + less</li>
+            </ul>
+        </section>
     </section>
 </div>
 
