complete event dispatcher explanation

--- a/index.html
+++ b/index.html
@@ -85,13 +85,158 @@
     </section>
     <section>
         <section>
-            <h1>Dispatcher</h1>
+            <h2>Event Dispatcher</h2>
             <img src="img/observer.png">
         </section>
         <section>
             <img src="img/request2.png">
         </section>
+        <section>
+            <h2>Dispatch d'un event</h2>
+        </section>
+        <section>
+            <h3>Récupérer le dispatcher</h3>
+            <pre>
+                <code class="php" data-trim data-noescape>
+//depuis le container
+$eventDispatcher = $container->get('event_dispatcher');
+
+//depuis un event
+$eventDispatcher = $event->getDispatcher();
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Créer un event</h3>
+            <p>1 event = 1 classe de données</p>
+        </section>
+        <section>
+            <pre>
+                <code class="php" data-trim data-noescape>
+&lt;?php
+namespace Thelia\Core\Event;
+use Symfony\Component\EventDispatcher\Event;
+class Cart extends Event
+{
+    protected $productId;
+    protected $quantity;
+
+    public function __construct($productId, $quantity)
+    {
+        $this->productId = $productId;
+        $this->quantity = $quantity;
+    }
+
+    public function getProductId()
+    {
+        return $this->productId;
+    }
+
+    public function getQuantity()
+    {
+        return $this->quantity;
+    }
+}
+                </code>
+            </pre>
+        </section>
+        <section>
+            <pre>
+                <code class="php" data-trim data-noescape>
+use Thelia\Core\Event\Cart;
+use Thelia\Core\Event\TheliaEvents;
+
+//
+
+$eventDispatcher = $container->get('event_dispatcher');
+$cartEvent = new Cart(1, 3);
+$eventDispatcher->dispatch(TheliaEvent::CART_ADD, $cartEvent);
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Liste des events Thelia</h3>
+            <ul>
+                <li><a href="http://doc.thelia.net/en/documentation/development/events/index.html">Documentation -> dev -> event</a></li>
+                <li><a href="http://doc.thelia.net/api/master/Thelia/Core/Event/TheliaEvents.html">Thelia\Core\Event\TheliaEvents</a></li>
+            </ul>
+        </section>
+        <section>
+            <h3>Créer un listener</h3>
+            <pre>
+                <code class="php" data-trim data-noescape>
+&lt;?php
+namespace MyModule\Listener;
+use Thelia\Core\Event\TheliaEvents;
+use Thelia\Core\Event\CartEvent;
+Class CartListener implements EventSubscriberInterface
+{
+
+    public static function getSubscribedEvents()
+    {
+        return [
+            TheliaEvents::CART_ADD => ['addItem', 100]
+        ];
+    }
+
+    public function addItem(CartEvent $event)
+    {
+        $item = $event->getCart()->getLast();
+
+        $item->addQuantity(rand(1,5));
+        $item->save();
+    }
+
+}
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h3>Déclarer le listener</h3>
+            <pre>
+                <code class="xml" data-trim data-noescape>
+&lt;service id="MyModule.cart.listener" class="MyModule\Listener\Cart">
+    &lt;tag name="kernel.event_subscriber"/>
+&lt;/service>
+                </code>
+            </pre>
+        </section>
+        <section>
+            <h2>Avantages</h2>
+            <ul>
+                <li>Jouer sur la priorité</li>
+                <li>Possibilité de surcharger totalement Thelia</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Inconvénient</h2>
+            <p>Rien ne vous assure que votre listener sera exécuté</p>
+        </section>
     </section>
+    <section>
+        <section>
+            <h1>Ressources</h1>
+        </section>
+        <section>
+            <ul>
+                <li><a href="http://doc.thelia.net">http://doc.thelia.net</a></li>
+                <li><a href="https://github.com/thelia/thelia">https://github.com/thelia/thelia</a></li>
+                <li><a href="http://thelia.net/forum">http://thelia.net/forum</a></li>
+            </ul>
+        </section>
+    </section>
+    <section>
+        <section>
+            <h1>OMT !</h1>
+        </section>
+        <section>
+            <img src="img/jacquo.png">
+        </section>
+    </section>
+    <section>
+        <h1>Merci !</h1>
+    </section>
+
 </div>
 
 </div>
