change background color on last slide

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Class CartListener implements EventSubscriberInterface
         <section>
             <h1>OMT !</h1>
         </section>
-        <section>
+        <section data-background="#FFFFFF">
             <img src="img/jacquo.png">
         </section>
     </section>
