--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </p>
     </section>
     <section>
-        <section data-background="img/pkoi.jpg">
+        <section data-background="img/why.jpg">
 
         </section>
         <section>
@@ -76,6 +76,16 @@
             </ul>
         </section>
         <section>
+            <h3>sf2 components</h3>
+            <ul>
+                <li>HttpKernel</li>
+                <li>HttpFoundation</li>
+                <li>EventDispatcher</li>
+                <li>DependencyInjection</li>
+                <li>Form</li>
+            </ul>
+        </section>
+        <section>
             <h2>FrontOffice</h2>
             <ul>
                 <li>HTML 5</li>
@@ -85,8 +95,44 @@
     </section>
     <section>
         <section>
-            <h2>Event Dispatcher</h2>
-            <img src="img/observer.png">
+            <h1>étendre Thelia</h1>
+        </section>
+        <section>
+            <h3>Structure d'un module</h3>
+            <pre>
+                <code data-trim>
+MyModule
+    MyModule.php
+    Config
+        config.xml
+        module.xml
+        routing.xml
+        schema.xml
+    Controller
+        MyModuleAdminController.php
+    I18n
+        fr_FR.php
+        en_US.php
+    Model
+        Base
+        Map
+        MyModule.php
+        MyModuleQuery.php
+    Listeners
+        CartListener.php
+        OrderListener.php
+    Loop
+        MyModuleLoop.php
+    templates
+        ...
+                </code>
+            </pre>
+        </section>
+    </section>
+    <section>
+        <section>
+            <h2>Listeners</h2>
+            <img src="img/mediator.png">
         </section>
         <section>
             <img src="img/request2.png">
@@ -215,13 +261,54 @@ Class CartListener implements EventSubscriberInterface
     </section>
     <section>
         <section>
-            <h1>Ressources</h1>
+            <h2>Routing</h2>
+        </section>
+        <section>
+            <p>Il suffit de créer un fichier routing.xml dans le répertoire Config</p>
+            <pre>
+                <code class="xml" data-trim>
+<?xml version="1.0" encoding="UTF-8" ?>
+
+<routes xmlns="http://symfony.com/schema/routing"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://symfony.com/schema/routing http://symfony.com/schema/routing/routing-1.0.xsd">
+    <route id="mumodule.id" path="/foo">
+        <default key="_controller">
+            MyModule\Controller\MyModuleAdminController::fooAction
+        </default>
+    </route>
+</routes>
+                </code>
+            </pre>
+        </section>
+        <section>
+            <p>Config personnalisée</p>
+
+            <pre>
+                <code class="xml">
+<service id="router.front" class="%router.class%">
+    <argument type="service" id="router.module.xmlLoader"/>
+    <argument>MyModule/Config/custom_routing.xml</argument>
+    <argument type="collection">
+        <argument key="cache_dir">%kernel.cache_dir%</argument>
+        <argument key="debug">%kernel.debug%</argument>
+    </argument>
+    <argument type="service" id="request.context"/>
+    <tag name="router.register" priority="256"/>
+</service>
+                </code>
+            </pre>
+        </section>
+    </section>
+    <section>
+        <section>
+            <h1>Next ?</h1>
         </section>
         <section>
             <ul>
-                <li><a href="http://doc.thelia.net">http://doc.thelia.net</a></li>
-                <li><a href="https://github.com/thelia/thelia">https://github.com/thelia/thelia</a></li>
-                <li><a href="http://thelia.net/forum">http://thelia.net/forum</a></li>
+                <li>Hooks</li>
+                <li>API</li>
+                <li>Marketplace</li>
             </ul>
         </section>
     </section>
@@ -235,6 +322,11 @@ Class CartListener implements EventSubscriberInterface
     </section>
     <section>
         <h1>Merci !</h1>
+        <ul>
+            <li><a href="http://doc.thelia.net">http://doc.thelia.net</a></li>
+            <li><a href="https://github.com/thelia/thelia">https://github.com/thelia</a></li>
+            <li><a href="https://twitter.com/theliaecommerce">@theliaecommerce</a></li>
+        </ul>
     </section>
 
 </div>
