complete slide intro

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <small>By <a href="http://manuel-raynaud.com/">Manuel Raynaud</a> / <a href="https://twitter.com/manuraynaud">@manuraynaud</a></small>
         </p>
         <p>
-            <small style="float: left">Clemont'ech</small>
+            <small style="float: left">Clemont'ech APIHour #9</small>
             <small style="float: right">28/05/2014</small>
         </p>
     </section>
