remove last sigle

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Class CartListener implements EventSubscriberInterface
     </section>
     <section>
         <section>
-            <h1>OMT !</h1>
+            <h1>One More Thing !</h1>
         </section>
         <section data-background="#FFFFFF">
             <img src="img/jacquo.png">
