change some css

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         .cover {
             color: #616161
         }
+
     </style>
 
 </head>
@@ -46,9 +47,9 @@
 <div class="slides">
     <section class="cover" data-background="img/bg.jpg">
         <img src="img/logo-thelia2-gris.png">
-        <p>E-Commerce solution based on Symfony 2 component</p>
+        <p>E-Commerce solution based on Symfony 2 components</p>
         <p>
-            <small>By <a href="http://manuel-raynaud.com/">Manuel Raynaud</a> / <a href="https://twitter.com/manuraynaud">@manuraynaud</a></small>
+            <small>By <a class="cover" href="http://manuel-raynaud.com/">Manuel Raynaud</a> / <a href="https://twitter.com/manuraynaud">@manuraynaud</a></small>
         </p>
         <p>
             <small style="float: left">Clemont'ech APIHour #9</small>
